--- a/sms-opt-in.html
+++ b/sms-opt-in.html
@@ -60,9 +60,9 @@
   </form>
 
   <nav>
-    <a href="/">Home</a>
-    <a href="terms.html">Terms</a>
-    <a href="privacy.html">Privacy</a>
+    <a href="./">Home</a>
+    <a href=".terms.html">Terms</a>
+    <a href=".privacy.html">Privacy</a>
   </nav>
 
   <section class="fine" aria-label="required disclosures">
