Fix absolute links on opt-in page (Terms/Privacy & footer nav)

--- a/sms-opt-in.html
+++ b/sms-opt-in.html
@@ -50,9 +50,9 @@
       </label>
     </div>
 
-    <div class="fine">
-      By submitting, you agree to our <a href="terms.html">Terms</a> and <a href="privacy.html">Privacy Policy</a>.
-    </div>
+    By submitting, you agree to our
+<a href="https://www.tgmllcnv.com/terms.html">Terms</a> and
+<a href="https://www.tgmllcnv.com/privacy.html">Privacy Policy</a>.
 
     <div class="actions">
       <button type="submit">Opt In</button>
@@ -60,10 +60,10 @@
   </form>
 
   <nav>
-    <a href="./">Home</a>
-    <a href=".terms.html">Terms</a>
-    <a href=".privacy.html">Privacy</a>
-  </nav>
+  <a href="https://www.tgmllcnv.com/">Home</a>
+  <a href="https://www.tgmllcnv.com/terms.html">Terms</a>
+  <a href="https://www.tgmllcnv.com/privacy.html">Privacy</a>
+</nav>
 
   <section class="fine" aria-label="required disclosures">
     <p><strong>Disclosures:</strong> Standard carrier rates may apply. Message frequency varies by activity.
