--- a/index.html
+++ b/index.html
@@ -1,25 +1,73 @@
-<!doctype html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>TGM Public</title>
-<style>
-  body{font:16px system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:40px;line-height:1.45}
-  .card{max-width:720px;margin:auto;padding:24px;border:1px solid #e5e7eb;border-radius:12px}
-  header{display:flex;align-items:center;gap:12px;margin-bottom:20px}
-  img{height:36px}
-  ul{margin:0 0 8px 0;padding-left:20px}
-  a{color:#2563eb;text-decoration:none} a:hover{text-decoration:underline}
-</style>
-<div class="card">
-  <header>
-    <img src="./logo.png" alt="TGM LLC logo">
-    <h1>TGM — Public Site</h1>
-  </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TGM LLC NV – Property Maintenance & Job Management</title>
+  <link rel="icon" href="logo.png">
+  <style>
+    :root { --fg:#111; --muted:#555; --bg:#fff; --max:880px }
+    * { box-sizing:border-box }
+    body { margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); background:var(--bg); line-height:1.6 }
+    .wrap { max-width:var(--max); margin:2.5rem auto; padding:0 1.25rem }
+    header { text-align:center; margin-bottom:2rem }
+    header img { height:42px; vertical-align:middle; margin-right:.5rem }
+    h1 { margin:.25rem 0 .25rem }
+    h2 { margin:.25rem 0 1rem; font-weight:500; color:var(--muted); font-size:1.15rem }
+    .card { border:1px solid #e5e7eb; border-radius:14px; padding:1.25rem; margin:1rem 0; background:#fff }
+    .grid { display:grid; gap:1rem }
+    @media(min-width:700px){ .grid{ grid-template-columns:1fr 1fr } }
+    nav a { margin-right:1rem }
+    a { color:#0b57d0; text-decoration:none }
+    a:hover { text-decoration:underline }
+    footer { margin-top:2rem; color:var(--muted); font-size:.95rem }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <header>
+      <img src="logo.png" alt="TGM logo">
+      <h1>TGM LLC NV</h1>
+      <h2>Property Maintenance & Job Management Services</h2>
+    </header>
 
-  <p>Choose an option:</p>
-  <ul>
-    <li><a href="./sms-opt-in.html">SMS Alerts Opt-In</a></li>
-    <li><a href="./terms.html">Terms</a></li>
-    <li><a href="./privacy.html">Privacy Policy</a></li>
-  </ul>
-</div>
+    <div class="card">
+      <p>
+        We coordinate jobs, scheduling, arrival times, receipts, and status updates for our customers, staff, and contractors.
+        Our messaging program is for <strong>operational alerts only</strong>. <strong>No marketing texts</strong>.
+      </p>
+    </div>
+
+    <div class="grid">
+      <div class="card">
+        <h3>Contact</h3>
+        <p>
+          📞 <a href="tel:+17753239917">775-323-9917</a><br>
+          📧 <a href="mailto:tgmllcnv@tgmllcnv.com">tgmllcnv@tgmllcnv.com</a><br>
+          📍 Reno, Nevada
+        </p>
+      </div>
+      <div class="card">
+        <h3>Links</h3>
+        <p>
+          <a href="sms-opt-in.html">SMS Alerts Opt-In</a><br>
+          <a href="terms.html">Terms</a><br>
+          <a href="privacy.html">Privacy Policy</a>
+        </p>
+        <p class="muted" style="color:#666;font-size:.95rem">
+          Reply <strong>STOP</strong> to stop. Reply <strong>HELP</strong> for help. Standard carrier rates may apply.
+        </p>
+      </div>
+    </div>
+
+    <footer>
+      <nav>
+        <a href="terms.html">Terms</a> ·
+        <a href="privacy.html">Privacy</a> ·
+        <a href="sms-opt-in.html">Opt-In</a>
+      </nav>
+      <p>© 2025 TGM LLC NV. All rights reserved.</p>
+    </footer>
+  </div>
+</body>
+</html>
