--- a/index.html
+++ b/index.html
@@ -1,73 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TGM LLC NV – Property Maintenance & Job Management</title>
-  <link rel="icon" href="logo.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TGM LLC – Home</title>
+  <meta name="description" content="TGM LLC provides job and service coordination in Nevada. Operational SMS updates only—no marketing." />
+  <link rel="icon" href="/logo.png">
   <style>
-    :root { --fg:#111; --muted:#555; --bg:#fff; --max:880px }
-    * { box-sizing:border-box }
-    body { margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); background:var(--bg); line-height:1.6 }
-    .wrap { max-width:var(--max); margin:2.5rem auto; padding:0 1.25rem }
-    header { text-align:center; margin-bottom:2rem }
-    header img { height:42px; vertical-align:middle; margin-right:.5rem }
-    h1 { margin:.25rem 0 .25rem }
-    h2 { margin:.25rem 0 1rem; font-weight:500; color:var(--muted); font-size:1.15rem }
-    .card { border:1px solid #e5e7eb; border-radius:14px; padding:1.25rem; margin:1rem 0; background:#fff }
-    .grid { display:grid; gap:1rem }
-    @media(min-width:700px){ .grid{ grid-template-columns:1fr 1fr } }
-    nav a { margin-right:1rem }
-    a { color:#0b57d0; text-decoration:none }
-    a:hover { text-decoration:underline }
-    footer { margin-top:2rem; color:var(--muted); font-size:.95rem }
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.5;max-width:900px;margin:0 auto;padding:24px}
+    header h1{margin:0 0 8px 0}
+    nav a{color:#2563eb}
+    .card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:20px}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <img src="logo.png" alt="TGM logo">
-      <h1>TGM LLC NV</h1>
-      <h2>Property Maintenance & Job Management Services</h2>
-    </header>
+  <header>
+    <h1>TGM LLC</h1>
+    <p>Job & service coordination for customers, staff, and contractors in Nevada.</p>
+    <nav style="margin:20px 0">
+      <a href="/index.html">Home</a> ·
+      <a href="/about.html">About</a> ·
+      <a href="/services.html">Services</a> ·
+      <a href="/contact.html">Contact</a> ·
+      <a href="/sms-opt-in.html">SMS Opt-In</a> ·
+      <a href="/sms-program.html">SMS Program</a> ·
+      <a href="/terms.html">Terms</a> ·
+      <a href="/privacy.html">Privacy</a>
+    </nav>
+  </header>
 
-    <div class="card">
-      <p>
-        We coordinate jobs, scheduling, arrival times, receipts, and status updates for our customers, staff, and contractors.
-        Our messaging program is for <strong>operational alerts only</strong>. <strong>No marketing texts</strong>.
-      </p>
-    </div>
+  <section class="card">
+    <h2>What we do</h2>
+    <p>We coordinate jobs from scheduling through completion. For convenience, we may send <strong>operational</strong> text updates (e.g., schedule windows, arrival notices, job status). <strong>No marketing texts.</strong></p>
+    <p>Want text updates? <a href="/sms-opt-in.html">Opt in here</a>. You can opt out any time by replying <strong>STOP</strong>. For help, reply <strong>HELP</strong> or email <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a>.</p>
+  </section>
 
-    <div class="grid">
-      <div class="card">
-        <h3>Contact</h3>
-        <p>
-          📞 <a href="tel:+17753239917">775-323-9917</a><br>
-          📧 <a href="mailto:tgmllcnv@tgmllcnv.com">tgmllcnv@tgmllcnv.com</a><br>
-          📍 Reno, Nevada
-        </p>
-      </div>
-      <div class="card">
-        <h3>Links</h3>
-        <p>
-          <a href="sms-opt-in.html">SMS Alerts Opt-In</a><br>
-          <a href="terms.html">Terms</a><br>
-          <a href="privacy.html">Privacy Policy</a>
-        </p>
-        <p class="muted" style="color:#666;font-size:.95rem">
-          Reply <strong>STOP</strong> to stop. Reply <strong>HELP</strong> for help. Standard carrier rates may apply.
-        </p>
-      </div>
-    </div>
-
-    <footer>
-      <nav>
-        <a href="terms.html">Terms</a> ·
-        <a href="privacy.html">Privacy</a> ·
-        <a href="sms-opt-in.html">Opt-In</a>
-      </nav>
-      <p>© 2025 TGM LLC NV. All rights reserved.</p>
-    </footer>
-  </div>
+  <section>
+    <h3>Quick links</h3>
+    <ul>
+      <li><a href="/sms-opt-in.html">SMS Alerts Opt-In</a></li>
+      <li><a href="/sms-program.html">SMS Program details</a></li>
+      <li><a href="/contact.html">Contact us</a></li>
+    </ul>
+  </section>
 </body>
 </html>
