--- a/sms-opt-in.html
+++ b/sms-opt-in.html
@@ -2,78 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TGM LLC — SMS Alerts Opt-In</title>
+  <link rel="icon" href="/logo.png">
   <style>
-    :root { color-scheme: light dark; }
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; line-height: 1.5; }
-    header { display: flex; align-items: center; gap: 12px; padding: 24px; }
-    .logo { height: 28px; }
-    .intro, .fine, nav, .wrap { max-width: 860px; margin: 0 auto; padding: 0 24px; }
-    .intro { margin-bottom: 16px; }
-    .card { max-width: 860px; margin: 16px auto; padding: 16px 16px 8px; border: 1px solid #e5e7eb; border-radius: 10px; }
-    .button { display:inline-block; padding:10px 16px; border-radius:8px; background:#2563eb; color:#fff; text-decoration:none; font-weight:600; }
-    .button:hover { background:#1f49d0; }
-    nav { display:flex; gap:16px; margin: 24px auto; }
-    nav a { color: #2563eb; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
-    .fine { font-size: 0.9rem; margin-bottom: 40px; }
-    .embed { position: relative; width: 100%; height: 1000px; }
-    .embed iframe { position: absolute; inset: 0; width: 100%; height: 100%; border: 0; }
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.5;max-width:900px;margin:0 auto;padding:24px}
+    nav a{color:#2563eb}
+    .fine{font-size:.9rem;margin-top:10px}
+    iframe{width:100%; height:1100px; border:0; background:#fff}
   </style>
 </head>
 <body>
-  <header>
-    <img class="logo" src="logo.png" srcset="logo@2x.png 2x" alt="TGM LLC logo" />
-    <h1>TGM LLC — SMS Alerts Opt-In</h1>
-  </header>
-
-  <p class="intro">
-    Opt in to receive operational text updates from TGM LLC (e.g., job scheduling,
-    arrival times, status updates). No marketing texts.
-  </p>
-
-  <section class="card" aria-labelledby="optin">
-    <div class="wrap">
-      <p>
-        By submitting, you agree to our
-        <a href="https://www.tgmllcnv.com/terms.html">Terms</a> and
-        <a href="https://www.tgmllcnv.com/privacy.html">Privacy Policy</a>.
-        Msg &amp; data rates may apply. Msg frequency varies.
-        Reply <strong>STOP</strong> to stop, <strong>HELP</strong> for help.
-      </p>
-    </div>
-
-    <!-- Embedded Google Form -->
-    <div class="embed" role="group" aria-label="SMS Opt-In Form">
-      <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSdgXb6OO4gXHOWXkCHVzxGUb1sUlChEUcOa5rQwEuYOL-85pA/viewform?embedded=true"
-        title="TGM LLC — SMS Alerts Opt-In Google Form">
-        Loading…
-      </iframe>
-    </div>
-
-    <div class="wrap" style="margin: 16px auto 8px;">
-      <a class="button"
-         href="https://docs.google.com/forms/d/e/1FAIpQLSdgXb6OO4gXHOWXkCHVzxGUb1sUlChEUcOa5rQwEuYOL-85pA/viewform"
-         target="_blank" rel="noopener">
-        Open the form in a new tab
-      </a>
-    </div>
-  </section>
-
-  <nav>
-    <a href="https://www.tgmllcnv.com/">Home</a>
-    <a href="https://www.tgmllcnv.com/terms.html">Terms</a>
-    <a href="https://www.tgmllcnv.com/privacy.html">Privacy</a>
+  <h1>TGM LLC — SMS Alerts Opt-In</h1>
+  <nav style="margin:20px 0">
+    <a href="/index.html">Home</a> ·
+    <a href="/sms-program.html">SMS Program</a> ·
+    <a href="/terms.html">Terms</a> ·
+    <a href="/privacy.html">Privacy</a>
   </nav>
+
+  <p>Opt in to receive <strong>operational</strong> text updates (e.g., job scheduling, arrival windows, status updates). <strong>No marketing texts.</strong></p>
+
+  <!-- Replace the src with your Google Form's "Embed" URL if different -->
+  <iframe
+    src="https://docs.google.com/forms/d/e/1FAIpQLSdgXb6OO4gXHOWXkCHVzxGUb1sUlChEUcOa5rQwEuYOL-85pA/viewform?embedded=true"
+    title="TGM LLC SMS Opt-In Form">
+    Loading…
+  </iframe>
 
   <section class="fine" aria-label="required disclosures">
     <p><strong>Disclosures:</strong> Standard carrier rates may apply. Message frequency varies by activity.
-    You can opt out any time by replying STOP. For help, reply HELP or email
+    You can opt out at any time by replying <strong>STOP</strong>. For help, reply <strong>HELP</strong> or email
     <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a>.</p>
   </section>
 </body>
 </html>
-
-
