--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,19 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8"><title>TGM LLC — Terms</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;max-width:760px;margin:40px auto;padding:0 16px;line-height:1.6}</style></head><body>
-<h1>Terms for SMS Alerts</h1>
-<p>By opting in, you agree to receive operational SMS from TGM LLC. Message frequency varies. Msg &amp; data rates may apply. Reply STOP to stop, HELP for help. Carriers are not liable for delayed or undelivered messages.</p>
-<p>Service is for job/service coordination with customers, staff, and contractors. No marketing messages are sent via this program.</p>
-<p>Contact: <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a></p>
-</body></html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Terms – TGM LLC</title>
+  <link rel="icon" href="/logo.png">
+  <style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.5;max-width:900px;margin:0 auto;padding:24px} nav a{color:#2563eb}</style>
+</head>
+<body>
+  <h1>Terms</h1>
+  <nav style="margin:20px 0">
+    <a href="/index.html">Home</a> · <a href="/sms-program.html">SMS Program</a> · <a href="/privacy.html">Privacy</a>
+  </nav>
+  <p>These terms govern the use of TGM LLC’s services. SMS updates are optional and require separate consent on the <a href="/sms-opt-in.html">opt-in form</a>. Opting in to SMS is not required to receive services.</p>
+  <p>For SMS details (STOP/HELP, frequency, fees), see the <a href="/sms-program.html">SMS Program</a>.</p>
+</body>
+</html>
+
