--- a/privacy.html
+++ b/privacy.html
@@ -1,14 +1,37 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8"><title>TGM LLC — Privacy Policy</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;max-width:760px;margin:40px auto;padding:0 16px;line-height:1.6}</style></head><body>
-<h1>Privacy Policy</h1>
-<p><em>Effective:</em> 2025-08-30</p>
-<p>TGM LLC provides operational text updates (no marketing). We collect the name and mobile number you submit to deliver these updates.</p>
-<h2>How we use your information</h2>
-<ul><li>Send operational SMS related to jobs and services you request.</li><li>Respond to HELP requests and manage STOP opt-outs.</li></ul>
-<h2>Sharing</h2>
-<p>We do not sell or rent personal information or phone numbers. We may share with service providers solely to deliver SMS.</p>
-<h2>Your choices</h2>
-<ul><li>Opt out any time by replying <strong>STOP</strong>.</li><li>Get help by replying <strong>HELP</strong> or emailing <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a>.</li></ul>
-<h2>Contact</h2>
-<p>TGM LLC • Email: <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a></p>
-</body></html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Privacy Policy – TGM LLC</title>
+  <link rel="icon" href="/logo.png">
+  <style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.5;max-width:900px;margin:0 auto;padding:24px} nav a{color:#2563eb} li{margin:.3rem 0}</style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <nav style="margin:20px 0">
+    <a href="/index.html">Home</a> · <a href="/sms-program.html">SMS Program</a> · <a href="/sms-opt-in.html">Opt-In</a>
+  </nav>
+
+  <p><em>Effective:</em> 2025-08-30</p>
+  <p>TGM LLC provides operational text updates (no marketing). We collect the name and mobile number you submit to deliver these updates.</p>
+
+  <h2>How we use your information</h2>
+  <ul>
+    <li>Send operational SMS related to jobs and services you request.</li>
+    <li>Respond to HELP requests and manage STOP opt-outs.</li>
+  </ul>
+
+  <h2>Sharing</h2>
+  <p>We do not sell or rent personal information or phone numbers. We may share with service providers solely to deliver SMS.</p>
+
+  <h2>Your choices</h2>
+  <ul>
+    <li>Opt out any time by replying <strong>STOP</strong>.</li>
+    <li>Get help by replying <strong>HELP</strong> or emailing <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a>.</li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p>TGM LLC • Email: <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a></p>
+</body>
+</html>
