--- a/index.html
+++ b/index.html
@@ -3,45 +3,83 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TGM LLC – Home</title>
-  <meta name="description" content="TGM LLC provides job and service coordination in Nevada. Operational SMS updates only—no marketing." />
-  <link rel="icon" href="/logo.png">
+  <title>TGM LLC — Public Site</title>
+  <meta name="description" content="TGM LLC provides operational SMS updates for jobs and services. No marketing texts." />
+  <link rel="icon" href="logo.png" />
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.5;max-width:900px;margin:0 auto;padding:24px}
-    header h1{margin:0 0 8px 0}
-    nav a{color:#2563eb}
-    .card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:20px}
+    :root { color-scheme: light; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; line-height: 1.5; }
+    .wrap { max-width: 960px; margin: 0 auto; padding: 24px 16px; }
+    header, footer { background:#f7f7f7; border-bottom:1px solid #eee; }
+    header .wrap, footer .wrap { display:flex; align-items:center; gap:16px; }
+    nav { margin-left:auto; display:flex; gap:16px; }
+    nav a, .btn { color:#2563eb; text-decoration:none; font-weight:600; }
+    .btn { display:inline-block; background:#2563eb; color:#fff; padding:10px 14px; border-radius:8px; }
+    .btn:hover { filter:brightness(0.95); }
+    h1 { margin: 0; font-size: 1.5rem; }
+    .hero { padding: 40px 0; }
+    .card { border:1px solid #e5e7eb; border-radius:10px; padding:16px; margin:16px 0; }
+    .grid { display:grid; gap:16px; grid-template-columns: repeat(auto-fit,minmax(260px,1fr)); }
+    small, .fine { color:#6b7280; }
+    footer { border-top:1px solid #eee; border-bottom:none; margin-top:40px; }
   </style>
 </head>
 <body>
   <header>
-    <h1>TGM LLC</h1>
-    <p>Job & service coordination for customers, staff, and contractors in Nevada.</p>
-    <nav style="margin:20px 0">
-      <a href="/index.html">Home</a> ·
-      <a href="/about.html">About</a> ·
-      <a href="/services.html">Services</a> ·
-      <a href="/contact.html">Contact</a> ·
-      <a href="/sms-opt-in.html">SMS Opt-In</a> ·
-      <a href="/sms-program.html">SMS Program</a> ·
-      <a href="/terms.html">Terms</a> ·
-      <a href="/privacy.html">Privacy</a>
-    </nav>
+    <div class="wrap">
+      <img src="logo.png" alt="TGM LLC" width="32" height="32" />
+      <h1>TGM LLC</h1>
+      <nav aria-label="Main">
+        <a href="sms-opt-in.html">SMS Alerts Opt-In</a>
+        <a href="sms-program.html">SMS Program</a>
+        <a href="terms.html">Terms</a>
+        <a href="privacy.html">Privacy</a>
+      </nav>
+    </div>
   </header>
 
-  <section class="card">
-    <h2>What we do</h2>
-    <p>We coordinate jobs from scheduling through completion. For convenience, we may send <strong>operational</strong> text updates (e.g., schedule windows, arrival notices, job status). <strong>No marketing texts.</strong></p>
-    <p>Want text updates? <a href="/sms-opt-in.html">Opt in here</a>. You can opt out any time by replying <strong>STOP</strong>. For help, reply <strong>HELP</strong> or email <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a>.</p>
-  </section>
+  <main class="wrap">
+    <section class="hero">
+      <h2>Operational updates, not marketing.</h2>
+      <p>We send job and service status updates by SMS (e.g., scheduling, arrival windows, and completion notices). 
+         Messaging is one-to-one and event-driven. No marketing texts.</p>
+      <p><a class="btn" href="sms-opt-in.html">Opt in to SMS updates</a></p>
+      <p class="fine">Reply STOP to opt out. Reply HELP for help. Standard carrier rates may apply.</p>
+    </section>
 
-  <section>
-    <h3>Quick links</h3>
-    <ul>
-      <li><a href="/sms-opt-in.html">SMS Alerts Opt-In</a></li>
-      <li><a href="/sms-program.html">SMS Program details</a></li>
-      <li><a href="/contact.html">Contact us</a></li>
-    </ul>
-  </section>
+    <section class="grid">
+      <div class="card">
+        <h3>What we send</h3>
+        <ul>
+          <li>Job scheduling &amp; arrival windows</li>
+          <li>On-site/technician status</li>
+          <li>Completion confirmations</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Support</h3>
+        <p>Email: <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a><br/>
+           Phone: <a href="tel:+17753056645">+1-775-305-6645</a></p>
+      </div>
+      <div class="card">
+        <h3>Compliance</h3>
+        <p>See our <a href="sms-program.html">SMS Program</a>, <a href="terms.html">Terms</a>, and <a href="privacy.html">Privacy</a>.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap">
+      <small>© <span id="y"></span> TGM LLC • Nevada, USA • <a href="mailto:support@tgmllcnv.com">support@tgmllcnv.com</a></small>
+      <nav aria-label="Footer" style="margin-left:auto">
+        <a href="sms-opt-in.html">Opt-In</a>
+        <a href="sms-program.html">SMS Program</a>
+        <a href="terms.html">Terms</a>
+        <a href="privacy.html">Privacy</a>
+      </nav>
+    </div>
+  </footer>
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
